--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         web developer and freelancer with over 3 years of experience in the tech
         industry. I am thrilled to welcome you to my website, where I offer my
         expertise and services in building stunning websites and innovative
-        applications. As a graduate from Bogazici University and a dedicated
+        applications. As a graduate from Istanbul University and a dedicated
         professional, I take great pride in crafting unique and tailored
         solutions for individuals, businesses, and organizations. My skill set
         includes expertise in HTML, CSS, JavaScript, TypeScript, React, and
