--- a/BookMe.html
+++ b/BookMe.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/bookme.css" />
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
+
   </head>
   <body>
     <div class="wrapper">
@@ -28,5 +34,18 @@
         </form>
       </div>
     </div>
+
+    <div class="sidebar open" id="sidebar">
+      <i class="fas fa-chevron-left open" id="toggleBtn"></i>
+      <div class="who-am-i" id="whoAmI">
+        <h4 id="home"><a href="index.html">Home</a></h4>
+        <h4 id="aboutme"><a href="#">About Me</a></h4>
+        <h4 id="contact"><a href="/Contact.html">Contact Me</a></h4>
+        <h4 id="bookme"><a href="/BookMe.html">Book Me</a></h4>
+      </div>
+    </div>
+
+    <script src="/sidebar.js"></script>
+
   </body>
 </html>
