--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
@@ -23,6 +23,7 @@
     <div class="sidebar open" id="sidebar">
       <i class="fas fa-chevron-left open" id="toggleBtn"></i>
       <div class="who-am-i" id="whoAmI">
+        <h4 id="home"><a href="index.html">Home</a></h4>
         <h4 id="aboutme"><a href="#">About Me</a></h4>
         <h4 id="contact"><a href="/Contact.html">Contact Me</a></h4>
         <h4 id="bookme"><a href="/BookMe.html">Book Me</a></h4>
@@ -31,38 +32,38 @@
 
     <div class="letter">
       <div id="p">
-        Hi there my name is Murat Ozturk, and I am a professional
-        web developer and freelancer with over 3 years of experience in the tech
-        industry. I am thrilled to welcome you to my website, where I offer my
-        expertise and services in building stunning websites and innovative
-        applications. As a graduate from Istanbul University and a dedicated
-        professional, I take great pride in crafting unique and tailored
-        solutions for individuals, businesses, and organizations. My skill set
-        includes expertise in HTML, CSS, JavaScript, TypeScript, React, and
-        WordPress, allowing me to create versatile, user-friendly, and visually
-        appealing digital experiences. With a passion for technology and a
-        commitment to excellence, I have successfully completed numerous
-        projects, collaborating with clients from various industries. From
-        responsive and interactive websites to cutting-edge mobile applications,
-        I strive to deliver the best solutions that meet your specific needs and
-        requirements. Customer satisfaction is at the core of my work
-        philosophy, and I take the time to understand your vision and goals to
-        provide results that surpass expectations. I believe that every project
-        is unique and deserves a personalized approach, and I am dedicated to
-        creating online platforms that stand out in today's competitive digital
-        landscape. Whether you are a small business looking to establish an
-        online presence or a larger enterprise seeking to enhance your digital
-        capabilities, I am here to support and guide you throughout the
-        development process. With an eye for detail, a flair for creativity, and
-        a commitment to delivering on time, I ensure that your project is
-        executed with utmost professionalism and precision. Thank you for
-        considering my services, and I look forward to embarking on this
-        exciting journey of collaboration with you. Please feel free to explore
-        my portfolio and reach out to me with any inquiries or project ideas.
-        Together, we can bring your digital vision to life and take your online
-        presence to new heights. <br><br><br>
-        Sincerely,<br> Murat Ozturk <br> Web 
-               Developer & Freelancer
+        Hi there my name is Murat Ozturk, and I am a professional web developer
+        and freelancer with over 3 years of experience in the tech industry. I
+        am thrilled to welcome you to my website, where I offer my expertise and
+        services in building stunning websites and innovative applications. As a
+        graduate from Istanbul University and a dedicated professional, I take
+        great pride in crafting unique and tailored solutions for individuals,
+        businesses, and organizations. My skill set includes expertise in HTML,
+        CSS, JavaScript, TypeScript, React, and WordPress, allowing me to create
+        versatile, user-friendly, and visually appealing digital experiences.
+        With a passion for technology and a commitment to excellence, I have
+        successfully completed numerous projects, collaborating with clients
+        from various industries. From responsive and interactive websites to
+        cutting-edge mobile applications, I strive to deliver the best solutions
+        that meet your specific needs and requirements. Customer satisfaction is
+        at the core of my work philosophy, and I take the time to understand
+        your vision and goals to provide results that surpass expectations. I
+        believe that every project is unique and deserves a personalized
+        approach, and I am dedicated to creating online platforms that stand out
+        in today's competitive digital landscape. Whether you are a small
+        business looking to establish an online presence or a larger enterprise
+        seeking to enhance your digital capabilities, I am here to support and
+        guide you throughout the development process. With an eye for detail, a
+        flair for creativity, and a commitment to delivering on time, I ensure
+        that your project is executed with utmost professionalism and precision.
+        Thank you for considering my services, and I look forward to embarking
+        on this exciting journey of collaboration with you. Please feel free to
+        explore my portfolio and reach out to me with any inquiries or project
+        ideas. Together, we can bring your digital vision to life and take your
+        online presence to new heights. <br /><br /><br />
+        Sincerely,<br />
+        Murat Ozturk <br />
+        Web Developer & Freelancer
       </div>
     </div>
 
