updated the site

--- a/Contact.html
+++ b/Contact.html
@@ -26,6 +26,17 @@
       <button type="submit">Submit</button>
     </form>
 
+    <div class="excali">
+      <p>
+        Hey if you would like to you can go to
+        <a href="https://excalidraw.com/">here</a> and draw
+        what is on your mind, so i can have an idea while 
+        we are having our meeting. It is totally optional.
+        It can be your website or the app you want to build etc... 
+      </p>
+    </div>
+
+
     <div class="sidebar open" id="sidebar">
       <i class="fas fa-chevron-left open" id="toggleBtn"></i>
       <div class="who-am-i" id="whoAmI">
