--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@
         Murat Ozturk <br />
         Web Developer & Freelancer
       </div>
+
+      <div class="logos">
+        <!-- <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" alt="html"> -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/128px-HTML5_logo_and_wordmark.svg.png" alt="html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/128px-JavaScript-logo.png" alt="js">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/128px-CSS3_logo_and_wordmark.svg.png" alt="css">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/React_Native.png" alt="React">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/WordPress_logo.svg/256px-WordPress_logo.svg.png" alt="wordpress">
+      </div>
     </div>
+
+
 
     <footer>
       <p>&copy; 2023 Murat Ozturk. All rights reserved.</p>
