--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
 
-  <body>
+  <body id="body">
     <div class="header-wrapper">
       <header id="header">
         <h1 class="glitch" id="glitch">MURAT OZTURK</h1>
