--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-
+    <div id="timer">25</div>
 
     <footer>
       <p>&copy; 2023 Murat Ozturk. All rights reserved.</p>
