--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="letter">
       <div id="p">
         Hi there my name is Murat Ozturk, and I am a professional web developer
-        and freelancer with over 3 years of experience in the tech industry. I
+        and freelancer in the tech industry with years of experience. I
         am thrilled to welcome you to my website, where I offer my expertise and
         services in building stunning websites and innovative applications. As a
         graduate from Istanbul University and a dedicated professional, I take
@@ -67,7 +67,6 @@
       </div>
 
       <div class="logos">
-        <!-- <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" alt="html"> -->
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/128px-HTML5_logo_and_wordmark.svg.png" alt="html">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/128px-JavaScript-logo.png" alt="js">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/128px-CSS3_logo_and_wordmark.svg.png" alt="css">
